--- a/style.css
+++ b/style.css
@@ -1,10 +1,15 @@
+div#container {
+	display: flex;
+	flex-flow: column;
+	height: 100vh;
+}
+
+div#top {
+	margin: 5px;
+}
+
 div#set-viewer {
-	border: 2px solid black;
-	margin: 1px;
-	padding: 5px;
-	width: 80%;
-	height: 80%;
-	overflow: scroll;
+	flex: auto;
 }
 
 div.selector {
@@ -13,5 +18,8 @@ div.selector {
 }
 
 body {
+	margin: 0;
 	height: 100vh;
+	overflow: hidden;
+	font-family: sans-serif;
 }
